# stosh

./: Cargo.toml  flake.nix
cmux/: Cargo.toml
cmux/src/: cmd.rs  cmux.rs  event.rs  handle.rs  lib.rs  stream.rs
debug-concise/: Cargo.toml
debug-concise/src/: lib.rs
debug-rollup/: Cargo.toml
debug-rollup/src/: entries.rs  lib.rs
partish/: Cargo.toml
partish/src/: cli.rs  cmd.rs  cmdinput.rs  handler.rs  lib.rs  log.rs  mainscreen.rs  prompt.rs  rectext.rs  run.rs  ui.rs
partish/src/cmd/: input.rs  portal.rs  stack.rs  textarea.rs
rctx/: Cargo.toml
rctx/src/: block.rs  layout.rs  lib.rs  rctx.rs  renderable.rs  term.rs
rseq/: Cargo.toml
rseq/src/: layout.rs  lib.rs  renderable.rs  renderseq.rs  term.rs  widgets.rs
rseq/src/layout/: constrained.rs  planner.rs  precedent.rs
rseq/src/renderseq/: seqr.rs
src/: disp.rs  display.rs  gadget.rs  gadgets.rs  handler.rs  lib.rs  notification.rs  rectext.rs  renderctx.rs  run.rs  testutils.rs  ui.rs
src/gadgets/: cmdentry.rs  exitdialog.rs  main.rs  root.rs
src/gadgets/exitdialog/: tests.rs
stosh/: Cargo.toml
stosh/src/: cmd.rs  cuteblock.rs  event.rs  evloop.rs  exitdialog.rs  handler.rs  lib.rs  log.rs  mainscreen.rs  run.rs  styles.rs  u16util.rs  ui.rs
stosh/src/cmd/: input.rs  portal.rs  stack.rs  textarea.rs
stosh/src/event/: fromimpls.rs
type-name-concise/: Cargo.toml
type-name-concise/src/: lib.rs  tests.rs
