[workspace]
resolver = "3"
members = [
  "cmux",
  "debug-concise",
  "debug-rollup",
  "rseq",
  "stosh",
  "type-name-concise",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
clap = "4.5.51"
crossterm = "0.28.1"
debug-concise = { path = "debug-concise" }
debug-rollup = { path = "debug-rollup" }
derive_more = "2.0.1"
derive-debug = "0.1.2"
derive-new = "0.7.0"
dirs = "6.0.0"
either = "1.15.0"
futures = "0.3.31"
indoc = "2.0.7"
pin-project = "1.1.10"
portable-pty = "0.9.0"
ratatui = "0.29.0"
ratatui-rseq = { path = "rseq" }
regex = "1.12.2"
rseq = { path = "rseq" }
stosh = { path = "stosh" }
test-case = "3.3.1"
time = "0.3.44"
tokio = "1.48.0"
tokio-command-multiplexer = { path = "cmux" }
tokio-process-stream = "0.4.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tui-textarea = "0.7.0"
type-name-concise = { path = "type-name-concise" }
