[package]
name = "partish"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true, features = ["event-stream"] }
futures.workspace = true
portable-pty.workspace = true
ratatui.workspace = true
ratatui-rctx.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tui-textarea.workspace = true
