[package]
name = "stosh"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true, features = ["event-stream"] }
derive-debug.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = ["as_ref", "deref"] }
dirs.workspace = true
either.workspace = true
futures.workspace = true
portable-pty.workspace = true
ratatui-rseq.workspace = true
ratatui.workspace = true
time = { workspace = true, features = ["formatting", "local-offset"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tokio-command-multiplexer.workspace = true
tokio-process-stream.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tui-textarea.workspace = true
